--- a/index.html
+++ b/index.html
@@ -29,36 +29,38 @@
         <div class="content left">
             <h3>Service 1</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas officia magni est suscipit iusto eligendi corporis dignissimos at quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas officia magni est suscipit iusto eligendi corporis dignissimos at quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quam quo debitis similique incidunt inventore delectus quos esse dignissimos facilis! Sint exercitationem accusantium vel quas esse maxime eligendi voluptatum voluptatibus ipsum, inventore eos, ipsa iure, sit libero tempora. Labore necessitatibus veritatis quia ratione, eum dolorem sequi repellat nobis odit a.
             </p>
         </div>
         <div class="content middle">
-            <h3>Service 1</h3>
+            <h3>Service 2</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas officia magni est suscipit iusto eligendi corporis dignissimos at quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas officia magni est suscipit iusto eligendi corporis dignissimos at quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptate ipsum unde a veritatis ipsa odit quis optio, obcaecati sequi aut at pariatur mollitia quae hic quas illum rerum nesciunt! Animi, quibusdam placeat. Quibusdam perspiciatis quasi, eaque ut autem excepturi harum atque odit animi. Illum recusandae expedita vero minima minus.
             </p>
         </div>
         <div class="content right">
-            <h3>Service 1</h3>
+            <h3>Service 3</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas officia magni est suscipit iusto eligendi corporis dignissimos at quisquam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas officia magni est suscipit iusto eligendi corporis dignissimos at quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic nemo neque ad cupiditate, delectus, eius harum aperiam deserunt fugit dolorem expedita obcaecati asperiores! Non modi aperiam quidem laborum laudantium repellat voluptas! Autem, voluptatum laborum. Veniam corrupti perferendis libero, assumenda alias quis porro suscipit illum praesentium quae corporis placeat labore temporibus.
             </p>
         </div>
         
     </div>
-    <div class="left major">
-        <h3>About us</h3>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, architecto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, recusandae?Lorem ipsum dolor sit amet.
-        </p>
-    </div>
-    <div class="right minor">
-        <h3>Contact</h3>
-        <ul class="socials">
-            <li><i class="fab fa-instagram"></i></li>
-            <li><i class="fab fa-twitter"></i></li>
-            <li><i class="fab fa-facebook"></i></li>
-        </ul>
+    <div class="left-right">
+        <div class="unequal left">
+            <h3>About us</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, architecto?Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, recusandae?Lorem ipsum dolor sit amet.
+            </p>
+        </div>
+        <div class="unequal right">
+            <h3>Contact</h3>
+            <ul class="socials">
+                <li><i class="fab fa-instagram"></i></li>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-facebook"></i></li>
+            </ul>
+        </div>
     </div>
 
 
