--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <!--Header-->
      
     <nav>
-        <h1 class="logo">Navbar2</h3>
+        <h1 class="logo">Float</h3>
         <ul class="navlinks">
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
